--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-Hello Temperature Converter
+<div class="temperature-container">
+      <div class="temperature-box">
+            <h6>Temperature Converter</h6>
+            <div class="temperature-conversion">
+                  <input type="text" name="temperature" placeholder="Enter Temperature in Celcius">
+                  <select>
+                        <option value="°C">Celcius</option>
+                        <option value="°F">Fahrenheit</option>
+                        <option value="°K">Kelvin</option>
+                  </select>
+            </div>
+            <div class="converted-temperature">
+                  24°C
+            </div>
+      </div>
+</div>
