--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,5 +15,44 @@
       text-align: center;
       margin: 20px 0;
     }
+    .temperature-conversion {
+      display: flex;
+      justify-content: space-around;
+
+      input {
+        border: 1px solid #eeeeee;
+        height: 50px;
+        border-radius: 5px;
+        width: 500px;
+        padding: 18px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      }
+
+      input:focus-visible {
+        outline: none;
+        border: 1px solid #444;
+      }
+
+      select {
+        border: 1px solid #eeeeee;
+        height: 50px;
+        border-radius: 5px;
+        width: 200px;
+        padding: 16px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      }
+
+      select:focus-visible {
+        outline: none;
+        border: 1px solid #444;
+      }
+    }
+    .converted-temperature {
+      font-size: 9rem;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-weight: 600;
+      text-align: center;
+      margin: 40px 0;
+    }
   }
 }
