--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,7 @@
     height: 500px;
     width: 800px;
     background-color: rgba(#ffffff, 0.9);
+    border-radius: 10px;
     h6 {
       color: #444;
       font: 800 308% / 1.4 "Open Sans", sans-serif;
